--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@internationalized/date": "^3.5.2",
     "@nextui-org/react": "^2.3.4",
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
+    "ethers": "^6.12.0",
     "framer-motion": "^11.1.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
